crates/launcher-interface/src/snapshots/launcher_interface__tests__approved_hashes_file.snap
---
source: crates/launcher-interface/src/lib.rs
expression: json
---
{
  "approved_hashes": [
    "sha256:abababababababababababababababababababababababababababababababab"
  ]
}
