crates/launcher-interface/src/snapshots/launcher_interface__tests__docker_digest.snap
---
source: crates/launcher-interface/src/lib.rs
expression: json
---
"sha256:abababababababababababababababababababababababababababababababab"
