crates/launcher-interface/src/snapshots/launcher_interface__tests__docker_digest_display.snap
---
source: crates/launcher-interface/src/lib.rs
expression: digest.to_string()
---
sha256:abababababababababababababababababababababababababababababababab
